preventing mouseover color change on survey arrows (blue color was lingering onto next question on iphone)

--- a/server/static/survey/assets/css/mobile.css
+++ b/server/static/survey/assets/css/mobile.css
@@ -20,6 +20,10 @@ a {
     color: rgb(244,244,244);
     font-size: 18px;
 }
+a.survey-arrow:hover {
+    color: rgb(244,244,244);
+    cursor: pointer;
+}
 
 ::-webkit-input-placeholder {
    color: rgb(22, 59, 66) !important;
